edit pom