@@ -291,30 +291,6 @@
 
 	<!-- 构建 -->
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>3.0.0</version>
-				<executions>
-					<execution>
-						<id>enforce-versions</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<requireJavaVersion>
-									<version>${java.version}</version>
-								</requireJavaVersion>
-							</rules>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -396,8 +372,7 @@
 							<configuration>
 								<resources>
 									<resource>
-										<directory>
-											src/main/resources/profiles/${dir}</directory>
+										<directory>src/main/resources/profiles/${dir}</directory>
 										<filtering>true</filtering>
 									</resource>
 								</resources>
@@ -505,8 +480,7 @@
 							<configuration>
 								<sources />
 								<weaveDirectories>
-									<weaveDirectory>
-										${project.build.directory}/classes</weaveDirectory>
+									<weaveDirectory>${project.build.directory}/classes</weaveDirectory>
 								</weaveDirectories>
 							</configuration>
 						</execution>
@@ -519,8 +493,7 @@
 							<configuration>
 								<testSources />
 								<weaveDirectories>
-									<weaveDirectory>
-										${project.build.directory}/test-classes</weaveDirectory>
+									<weaveDirectory>${project.build.directory}/test-classes</weaveDirectory>
 								</weaveDirectories>
 							</configuration>
 						</execution>
@@ -660,13 +633,20 @@
 		</profile>
 		<profile>
 			<!-- docker环境 -->
-			<id>docker</id>
+			<id>docker-jib</id>
 			<properties>
 				<dir>docker</dir>
 			</properties>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
+			<dependencies>
+				<!--<dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                    <scope>compile</scope>
+                </dependency>-->
+			</dependencies>
 			<build>
 				<plugins>
 					<plugin>
@@ -679,10 +659,10 @@
 								<image>eclipse-temurin:21-jre</image>
 							</from>
 							<to>
-								<image>
-									svn.youshengyun.com:9923/${project.artifactId}-jib</image>
+								<image>svn.youshengyun.com:9923/${project.artifactId}-jib</image>
 								<tags>
 									<tag>${project.version}</tag>
+									<tag>latest</tag>
 								</tags>
 								<auth>
 									<username>publisher</username>
@@ -703,64 +683,142 @@
 			</build>
 		</profile>
 		<profile>
-			<id>native</id>
+			<!-- docker环境 -->
+			<id>docker-jvm</id>
+			<properties>
+				<dir>docker</dir>
+			</properties>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
 			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-jar-plugin</artifactId>
-							<configuration>
-								<archive>
-									<manifestEntries>
-										<Spring-Boot-Native-Processed>true</Spring-Boot-Native-Processed>
-									</manifestEntries>
-								</archive>
-							</configuration>
-						</plugin>
-						<plugin>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-maven-plugin</artifactId>
-							<configuration>
-								<image>
-									<builder>
-										paketobuildpacks/builder-jammy-tiny:latest</builder>
-									<env>
-										<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-									</env>
-								</image>
-							</configuration>
-							<executions>
-								<execution>
-									<id>process-aot</id>
-									<goals>
-										<goal>process-aot</goal>
-									</goals>
-								</execution>
-							</executions>
-						</plugin>
-						<plugin>
-							<groupId>org.graalvm.buildtools</groupId>
-							<artifactId>native-maven-plugin</artifactId>
-							<configuration>
-								<classesDirectory>
-									${project.build.outputDirectory}</classesDirectory>
-								<metadataRepository>
-									<enabled>true</enabled>
-								</metadataRepository>
-								<requiredVersion>22.3</requiredVersion>
-							</configuration>
-							<executions>
-								<execution>
-									<id>add-reachability-metadata</id>
-									<goals>
-										<goal>add-reachability-metadata</goal>
-									</goals>
-								</execution>
-							</executions>
-						</plugin>
-					</plugins>
-				</pluginManagement>
+				<plugins>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<mainClass>${start-class}</mainClass>
+							<excludes>
+								<exclude>
+									<groupId>org.projectlombok</groupId>
+									<artifactId>lombok</artifactId>
+								</exclude>
+							</excludes>
+							<image>
+								<env>
+									<BP_NATIVE_IMAGE>false</BP_NATIVE_IMAGE>
+									<BP_JVM_VERSION>21</BP_JVM_VERSION>
+								</env>
+								<name>svn.youshengyun.com:9923/${project.artifactId}-jvm:${project.version}</name>
+								<publish>true</publish>
+							</image>
+							<docker>
+								<publishRegistry>
+									<username>publisher</username>
+									<password>83204585</password>
+								</publishRegistry>
+							</docker>
+						</configuration>
+						<executions>
+							<execution>
+								<id>package</id>
+								<goals>
+									<goal>repackage</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>generate-resources</id>
+								<goals>
+									<goal>build-info</goal>
+								</goals>
+							</execution>
+							<execution>
+								<phase>install</phase>
+								<goals>
+									<goal>build-image-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<!-- docker环境 -->
+			<id>docker-native</id>
+			<properties>
+				<dir>docker</dir>
+			</properties>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-jar-plugin</artifactId>
+						<configuration>
+							<archive>
+								<manifestEntries>
+									<Spring-Boot-Native-Processed>true</Spring-Boot-Native-Processed>
+								</manifestEntries>
+							</archive>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-maven-plugin</artifactId>
+						<configuration>
+							<image>
+								<builder>paketobuildpacks/builder-jammy-tiny</builder>
+								<buildpacks>
+									<buildpack>gcr.io/paketo-buildpacks/graalvm</buildpack>
+									<buildpack>gcr.io/paketo-buildpacks/java-native-image</buildpack>
+								</buildpacks>
+								<env>
+									<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+									<BP_JVM_VERSION>21</BP_JVM_VERSION>
+									<BP_NATIVE_IMAGE_BUILD_ARGUMENTS>--enable-preview</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
+								</env>
+								<name>svn.youshengyun.com:9923/${project.artifactId}-native:${project.version}</name>
+								<publish>true</publish>
+							</image>
+							<docker>
+								<publishRegistry>
+									<username>publisher</username>
+									<password>83204585</password>
+								</publishRegistry>
+							</docker>
+						</configuration>
+						<executions>
+							<execution>
+								<id>process-aot</id>
+								<goals>
+									<goal>process-aot</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.graalvm.buildtools</groupId>
+						<artifactId>native-maven-plugin</artifactId>
+						<configuration>
+							<classesDirectory> ${project.build.outputDirectory}</classesDirectory>
+							<metadataRepository>
+								<enabled>true</enabled>
+							</metadataRepository>
+							<requiredVersion>22.3</requiredVersion>
+						</configuration>
+						<executions>
+							<execution>
+								<id>add-reachability-metadata</id>
+								<goals>
+									<goal>add-reachability-metadata</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
 			</build>
 		</profile>
 	</profiles>
